--- a/promtail/promtail.yaml
+++ b/promtail/promtail.yaml
@@ -1,5 +1,6 @@
-http_listen_port: 9080
-grpc_listen_port: 0
+server:
+  http_listen_port: 9080
+  grpc_listen_port: 0
 
 positions:
   filename: /tmp/positions.yaml
