Fix: update Ruff command to include 'check' for linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           pip install ruff
 
       - name: Ejecutar Ruff (linter Python)
-        run: ruff api/
+        run: ruff check api/
 
   build:
     name: Fase 2 - Build de contenedores
