--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,7 @@ jobs:
         run: cp .env.example .env || echo "No .env.example found"
 
       - name: Levantar servicios
-        run: docker-compose up -d --build
-
+        run: docker compose up -d --build
       - name: Esperar a que la API responda (health check)
         run: |
           for i in {1..10}; do
@@ -55,7 +54,7 @@ jobs:
             sleep 5
           done
           echo "La API no respondió a tiempo"
-          docker-compose logs
+          docker compose logs
           exit 1
 
       - name: Verificar Loki
