--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Construir servicios con Docker Compose
-        run: docker-compose build
+        run: docker compose build
 
   up:
     name: Fase 3 - Levantar y probar servicios
@@ -61,9 +61,9 @@ jobs:
         run: |
           curl --fail http://localhost:3100/ready || {
             echo "Loki no está listo"
-            docker-compose logs
+            docker compose logs
             exit 1
           }
 
       - name: Mostrar logs (si todo va bien)
-        run: docker-compose logs --no-color
+        run: docker compose logs --no-color
