Fix: update service startup in CI workflow to include Promtail configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,15 @@ jobs:
         run: cp .env.example .env || echo "No .env.example found"
 
       - name: Levantar servicios
-        run: docker compose up -d --build
+        run:         promtail:
+          image: grafana/promtail:2.9.7
+          container_name: promtail
+          env_file:
+            - .env
+          volumes:
+            - ./promtail/promtail.yaml:/etc/promtail/promtail.yaml:ro
+            # Usar un valor por defecto para FAIL2BAN_LOG_PATH
+            - ${FAIL2BAN_LOG_PATH:-/tmp/fail2ban.log}:${FAIL2BAN_LOG_PATH:-/tmp/fail2ban.log}:ro compose up -d --build
       - name: Esperar a que la API responda (health check)
         run: |
           for i in {1..10}; do
