--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - aca-fail2ban-dashboard
+name: CI Pipeline - Fail2Ban Dashboard
 
 on:
   push:
@@ -8,71 +8,82 @@ on:
 
 jobs:
   lint:
-    name: Fase 1 - Linter
+    name: Stage 1 - Code Quality Check
     runs-on: ubuntu-latest
     steps:
-      - name: Clonar repositorio
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Instalar Python y Ruff
+      - name: Setup Python and Ruff
         run: |
           python3 -m pip install --upgrade pip
           pip install ruff
 
-      - name: Ejecutar Ruff (linter Python)
+      - name: Run Ruff linter
         run: ruff check api/
 
   build:
-    name: Fase 2 - Build de contenedores
+    name: Stage 2 - Container Build
     needs: lint
     runs-on: ubuntu-latest
     steps:
-      - name: Clonar repositorio
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Crear archivo .env desde .env.example
+      - name: Create environment file
         run: |
-          cp .env.example .env || echo "No .env.example found"
+          cp .env.example .env || echo "No .env.example found, creating new .env file"
           echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> .env
           echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> $GITHUB_ENV
 
-      - name: Construir servicios con Docker Compose
+      - name: Build Docker services
         run: docker compose build
 
-  up:
-    name: Fase 3 - Levantar y probar servicios
+  test:
+    name: Stage 3 - Integration Testing
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Clonar repositorio
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Crear archivo .env desde .env.example
+      - name: Create environment file
         run: |
-          cp .env.example .env || echo "No .env.example found"
+          cp .env.example .env || echo "No .env.example found, creating new .env file"
           echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> .env
           echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> $GITHUB_ENV
 
-      - name: Levantar servicios
+      - name: Start service stack
         run: docker compose up -d --build
-      - name: Esperar a que la API responda (health check)
-        run: |
-          for i in {1..10}; do
-            curl --fail http://0.0.0.0:8000/health && exit 0
-            echo "Esperando API..."
-            sleep 5
-          done
-          echo "La API no respondió a tiempo"
-          docker compose logs
-          exit 1
 
-      - name: Verificar Loki
+      - name: Wait for API health check
         run: |
-          curl --fail http://localhost:3100/ready || {
-            echo "Loki no está listo"
+          attempt=1
+          max_attempts=10
+          interval=5
+          until curl --fail http://0.0.0.0:8000/health || [ $attempt -eq $max_attempts ]; do
+            echo "Attempt $attempt/$max_attempts: Waiting for API to be ready..."
+            sleep $interval
+            ((attempt++))
+          done
+
+          if [ $attempt -eq $max_attempts ]; then
+            echo "ERROR: API health check failed after $max_attempts attempts"
             docker compose logs
             exit 1
-          }
+          fi
 
-      - name: Mostrar logs (si todo va bien)
+          echo "API is healthy and ready"
+
+      - name: Verify Loki service
+        run: |
+          if ! curl --fail http://localhost:3100/ready; then
+            echo "ERROR: Loki service is not ready"
+            docker compose logs
+            exit 1
+          fi
+          echo "Loki service is ready"
+
+      - name: Display service logs
         run: docker compose logs --no-color
+        if: always()
