--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,16 +82,16 @@ jobs:
           sleep 15
 
           # Try different endpoints to check Loki availability
-          if curl --fail -s http://loki:3100/ready > /dev/null; then
+          if curl --fail -s http://localhost:3100/ready > /dev/null; then
             echo "Loki reports ready via /ready endpoint"
-          elif curl --fail -s http://loki:3100/metrics > /dev/null; then
+          elif curl --fail -s http://localhost:3100/metrics > /dev/null; then
             echo "Loki metrics endpoint responding, service appears to be running"
-          elif curl --fail -s http://loki:3100/loki/api/v1/status/buildinfo > /dev/null; then
+          elif curl --fail -s http://localhost:3100/loki/api/v1/status/buildinfo > /dev/null; then
             echo "Loki API responding, service appears to be running"
           else
             echo "ERROR: Loki service is not responding to any health checks"
             echo "Loki response to /ready:"
-            curl -v http://loki:3100/ready || true
+            curl -v http://localhost:3100/ready || true
             echo "Loki logs:"
             docker compose logs loki
             exit 1
