--- a/promtail/promtail.yaml
+++ b/promtail/promtail.yaml
@@ -16,22 +16,41 @@ scrape_configs:
         labels:
           job: fail2ban
           __path__: ${FAIL2BAN_LOG_PATH}
+
     pipeline_stages:
       - multiline:
           firstline: '^\d{4}-\d{2}-\d{2}'
-      #- regex:
-      #    expression: >
-      #      ^(?P<time>\d{4}-\d{2}-\d{2}\s\d{2}:\d{2}:\d{2}),\d+\s+fail2ban\.(?P<component>\S+)\s+(?P<pid>\d+):\s+(?P<level>\S+)\s+(?P<msg>.*)$
+
       - regex:
           expression: >
-            ^(?P<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}),\d+\s+fail2ban\.(?P<component>\S+)\s+\[(?P<pid>\d+)\]:\s+(?P<level>\S+)\s+\[(?P<jail>[^\]]+)\]\s+(?P<msg>.*)$
+            ^(?P<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}),\d+\s+fail2ban\.(?P<component>\S+)\s+\[(?P<pid>\d+)\]:\s+(?P<level>\S+)\s+(?P<rest>.*)$
+
       - timestamp:
           source: time
-          format: '2006-01-02 15:04:05'
+          format: "2006-01-02 15:04:05"
+
+      - json:
+          expressions: {} # No-op
+
+      - match:
+          selector: '{job="fail2ban"}'
+          stages:
+            - regex:
+                expression: '\[(?P<jail>[^\]]+)\]\s+(?P<action>Found|Ban|Unban)\s+(?P<ip>[0-9.:]+)'
+            - labels:
+                jail: jail
+                action: action
+                ip: ip
+
+      - match:
+          selector: '{job="fail2ban",action!~".+"}'
+          stages:
+            - regex:
+                expression: "ip:(?P<ip>[0-9.:]+)"
+            - labels:
+                ip: ip
+
       - labels:
           component: component
           pid: pid
           level: level
-          jail: jail
-      - output:
-          source: msg
