chore: :art: Update CI workflow to include unit tests, security scans, and integration checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,11 +77,9 @@ jobs:
 
       - name: Verify Loki service
         run: |
-          # Allow more time for Loki to initialize
           echo "Waiting for Loki service to be ready..."
           sleep 15
 
-          # Try different endpoints to check Loki availability
           if curl --fail -s http://localhost:3100/ready > /dev/null; then
             echo "Loki reports ready via /ready endpoint"
           elif curl --fail -s http://localhost:3100/metrics > /dev/null; then
@@ -102,3 +100,88 @@ jobs:
       - name: Display service logs
         run: docker compose logs --no-color
         if: always()
+
+  unit-tests:
+    name: Stage 4 - Unit Tests
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Python environment
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install -r api/requirements.txt
+          pip install pytest
+
+      - name: Run unit tests
+        run: pytest api/tests -q
+
+  security-scan:
+    name: Stage 5 - Security Scans
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: pip-audit
+        run: |
+          pip install pip-audit
+          pip-audit -r api/requirements.txt
+
+      - name: Docker image scan (Trivy)
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: "your-api-image-name:latest"
+          format: "table"
+          exit-code: "1"
+
+  integration-check:
+    name: Stage 6 - Integration Flow Test
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Inject synthetic log line
+        run: |
+          echo 'May 24 20:00:00 server fail2ban[1234]: NOTICE [sshd] Ban 1.2.3.4' >> /tmp/fail2ban.log
+
+      - name: Check log via API
+        run: |
+          sleep 5
+          curl --fail http://localhost:8000/fail2ban-logs | grep "1.2.3.4"
+
+      - name: Debug on failure
+        if: failure()
+        run: docker compose logs
+
+  save-artifacts:
+    name: Stage 7 - Save Reports & Logs
+    needs: [unit-tests, integration-check]
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Collect logs
+        run: docker compose logs --no-color > logs.txt
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: service-logs
+          path: logs.txt
+
+  cleanup:
+    name: Stage 8 - Cleanup
+    needs: [save-artifacts]
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Remove containers and volumes
+        run: docker compose down -v --remove-orphans
