update: :art: Modify unit test command to change directory and update dependencies in requirements

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,7 +116,9 @@ jobs:
           pip install pytest
 
       - name: Run unit tests
-        run: pytest api/tests -q
+        run: |
+          cd api
+          PYTHONPATH=. pytest tests -q
 
   security-scan:
     name: Stage 5 - Security Scans
