--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,6 +196,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Create environment file
+        run: |
+          cp .env.example .env || echo "No .env.example found, creating new .env file"
+          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> .env
+          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> $GITHUB_ENV
+
       - name: Collect logs
         run: docker compose logs --no-color > logs.txt
 
@@ -213,6 +219,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Create environment file
+        run: |
+          cp .env.example .env || echo "No .env.example found, creating new .env file"
+          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> .env
+          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> $GITHUB_ENV
 
       - name: Remove containers and volumes
         run: docker compose down -v --remove-orphans
