--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,10 +1,7 @@
-fastapi==0.115.12
-uvicorn[standard]==0.34.2
+fastapi==0.95.1
+uvicorn[standard]==0.22.0
+httpx==0.24.0
 python-dotenv==1.0.0
-pydantic==2.8.2
-jinja2==3.1.6
+pydantic==1.10.11
+jinja2==3.1.4
 websockets>=10.0
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-httpx>=0.27.0
-starlette>=0.40.0
