--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,17 @@
 name: CI Pipeline - Fail2Ban Dashboard
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches: [main, develop, feature/*]
   pull_request:
     branches: [main, develop]
+
+env:
+  FAIL2BAN_LOG_PATH: /var/log/fail2ban.log
 
 jobs:
   lint:
@@ -41,11 +48,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Create environment file
+      - name: Validate & create .env
         run: |
-          cp .env.example .env || echo "No .env.example found, creating new .env file"
-          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> .env
-          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> $GITHUB_ENV
+          if [ ! -f .env.example ]; then
+            echo "ERROR: .env.example not found" && exit 1
+          fi
+          cp .env.example .env
+          echo "FAIL2BAN_LOG_PATH=${{ env.FAIL2BAN_LOG_PATH }}" >> .env
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Build Docker services
         run: docker compose build
@@ -61,52 +81,51 @@ jobs:
       - name: Create environment file
         run: |
           cp .env.example .env || echo "No .env.example found, creating new .env file"
-          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> .env
-          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> $GITHUB_ENV
+          echo "FAIL2BAN_LOG_PATH=${{ env.FAIL2BAN_LOG_PATH }}" >> .env
+          echo "FAIL2BAN_LOG_PATH=${{ env.FAIL2BAN_LOG_PATH }}" >> $GITHUB_ENV
 
       - name: Start service stack
         run: docker compose up -d --build
 
       - name: Wait for API health check
         run: |
-          attempt=1
-          max_attempts=10
-          interval=5
-          until curl --fail http://0.0.0.0:8000/health || [ $attempt -eq $max_attempts ]; do
-            echo "Attempt $attempt/$max_attempts: Waiting for API to be ready..."
-            sleep $interval
-            ((attempt++))
+          MAX_ATTEMPTS=15
+          INTERVAL=10
+
+          for attempt in $(seq 1 $MAX_ATTEMPTS); do
+            if curl --fail --silent --max-time 10 http://localhost:8000/health; then
+              echo "✅ API is healthy (attempt $attempt/$MAX_ATTEMPTS)"
+              exit 0
+            fi
+            
+            echo "⏳ Attempt $attempt/$MAX_ATTEMPTS failed, retrying in ${INTERVAL}s..."
+            if [ $attempt -eq $MAX_ATTEMPTS ]; then
+              echo "❌ API health check failed after $MAX_ATTEMPTS attempts"
+              docker compose logs api
+              exit 1
+            fi
+            sleep $INTERVAL
           done
 
-          if [ $attempt -eq $max_attempts ]; then
-            echo "ERROR: API health check failed after $max_attempts attempts"
-            docker compose logs
-            exit 1
-          fi
-
-          echo "API is healthy and ready"
-
-      - name: Verify Loki service
+      - name: Verify Loki service health
         run: |
-          echo "Waiting for Loki service to be ready..."
-          sleep 15
+          echo "🔍 Verifying Loki service..."
 
-          if curl --fail -s http://localhost:3100/ready > /dev/null; then
-            echo "Loki reports ready via /ready endpoint"
-          elif curl --fail -s http://localhost:3100/metrics > /dev/null; then
-            echo "Loki metrics endpoint responding, service appears to be running"
-          elif curl --fail -s http://localhost:3100/loki/api/v1/status/buildinfo > /dev/null; then
-            echo "Loki API responding, service appears to be running"
-          else
-            echo "ERROR: Loki service is not responding to any health checks"
-            echo "Loki response to /ready:"
-            curl -v http://localhost:3100/ready || true
-            echo "Loki logs:"
-            docker compose logs loki
-            exit 1
-          fi
+          # Wait for Loki to be ready
+          for i in {1..30}; do
+            if curl --fail --silent --max-time 5 http://localhost:3100/ready; then
+              echo "✅ Loki is ready"
+              break
+            fi
+            echo "⏳ Waiting for Loki... ($i/30)"
+            sleep 2
+          done
 
-          echo "Loki service is operational"
+          # Verify API endpoints
+          echo "🧪 Testing Loki endpoints..."
+          curl --fail http://localhost:3100/metrics > /dev/null || exit 1
+          curl --fail http://localhost:3100/loki/api/v1/status/buildinfo > /dev/null || exit 1
+          echo "✅ All Loki endpoints responding"
 
       - name: Display service logs
         run: docker compose logs --no-color
@@ -171,15 +190,15 @@ jobs:
       - name: Create environment and mock log
         run: |
           cp .env.example .env
-          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> .env
-          echo 'May 24 19:00:00 server fail2ban[1234]: INFO [sshd] Starting' > /tmp/fail2ban.log
+          echo "FAIL2BAN_LOG_PATH=${{ env.FAIL2BAN_LOG_PATH }}" >> .env
+          echo 'May 24 19:00:00 server fail2ban[1234]: INFO [sshd] Starting' > ${{ env.FAIL2BAN_LOG_PATH }}
 
       - name: Start service stack
         run: docker compose up -d --build
 
       - name: Inject synthetic log line
         run: |
-          echo 'May 24 20:00:00 server fail2ban[1234]: NOTICE [sshd] Ban 1.2.3.4' >> /tmp/fail2ban.log
+          echo 'May 24 20:00:00 server fail2ban[1234]: NOTICE [sshd] Ban 1.2.3.4' >> ${{ env.FAIL2BAN_LOG_PATH }}
 
       - name: Wait for API health check
         run: |
@@ -214,8 +233,8 @@ jobs:
       - name: Create environment file
         run: |
           cp .env.example .env || echo "No .env.example found, creating new .env file"
-          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> .env
-          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> $GITHUB_ENV
+          echo "FAIL2BAN_LOG_PATH=${{ env.FAIL2BAN_LOG_PATH }}" >> .env
+          echo "FAIL2BAN_LOG_PATH=${{ env.FAIL2BAN_LOG_PATH }}" >> $GITHUB_ENV
 
       - name: Collect logs
         run: docker compose logs --no-color > logs.txt
@@ -238,8 +257,8 @@ jobs:
       - name: Create environment file
         run: |
           cp .env.example .env || echo "No .env.example found, creating new .env file"
-          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> .env
-          echo "FAIL2BAN_LOG_PATH=/tmp/fail2ban.log" >> $GITHUB_ENV
+          echo "FAIL2BAN_LOG_PATH=${{ env.FAIL2BAN_LOG_PATH }}" >> .env
+          echo "FAIL2BAN_LOG_PATH=${{ env.FAIL2BAN_LOG_PATH }}" >> $GITHUB_ENV
 
-      - name: Remove containers and volumes
-        run: docker compose down -v --remove-orphans
+      - name: Teardown Docker
+        run: docker compose down -v --remove-orphans --rmi local
