--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,14 +59,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker services with cache
-        uses: docker/bake-action@v4
+      - name: Build API service with cache
+        uses: docker/build-push-action@v5
         with:
-          files: |
-            docker-compose.yml
-          set: |
-            *.cache-from=type=gha
-            *.cache-to=type=gha,mode=max
+          context: ./api
+          push: false
+          tags: fail2ban-api:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build remaining services
+        run: docker compose build
         env:
           DOCKER_BUILDKIT: 1
 
