update: :art: Refactor Jira notification step to verify credentials and improve message format

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -276,40 +276,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Determine pipeline status
-        id: status
+      - name: Verify Jira variables
         run: |
-          if [[ "${{ needs.lint.result }}" == "success" && 
-                "${{ needs.build.result }}" == "success" && 
-                "${{ needs.test.result }}" == "success" && 
-                "${{ needs.unit-tests.result }}" == "success" && 
-                "${{ needs.integration-check.result }}" == "success" ]]; then
-            echo "status=success" >> $GITHUB_OUTPUT
-            echo "emoji=✅" >> $GITHUB_OUTPUT
-          else
-            echo "status=failure" >> $GITHUB_OUTPUT
-            echo "emoji=❌" >> $GITHUB_OUTPUT
+          if [ -z "${{ secrets.JIRA_USER_EMAIL }}" ] || [ -z "${{ secrets.JIRA_API_TOKEN }}" ] || [ -z "${{ secrets.JIRA_PROJECT_KEY }}" ] || [ -z "${{ secrets.JIRA_BASE_URL }}" ]; then
+            echo "ERROR: Jira credentials not set" && exit 1
           fi
 
-      - name: Send Jira notification
-        env:
-            JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
-            JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
-            JIRA_PROJECT_KEY: ${{ secrets.JIRA_PROJECT_KEY }}
-            JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
-
+      - name: Notify Jira with CI report
         run: |
-          if [[ "${{ steps.status.outputs.status }}" == "failure" ]]; then
-            curl -X POST \
-              -H "Content-Type: application/json" \
-              -u "$JIRA_EMAIL:$JIRA_API_TOKEN" \
-              -d '{
-                "fields": {
-                  "project": {"key": "'$JIRA_PROJECT_KEY'"},
-                  "summary": "❌ CI Pipeline Failed - ${{ github.workflow }}",
-                  "description": "Pipeline failed for repository ${{ github.repository }}\n\n*Details:*\n• Branch: ${{ github.ref_name }}\n• Commit: ${{ github.sha }}\n• Author: ${{ github.actor }}\n• Run ID: ${{ github.run_id }}\n\n[View Failed Run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})",
-                  "issuetype": {"name": "Bug"}
-                }
-              }' \
-              "$JIRA_URL/rest/api/3/issue"
-          fi
+          curl -X POST -u "${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          --data '{
+            "fields": {
+              "project": { "key": "${{ secrets.JIRA_PROJECT_KEY }}" },
+              "summary": "Reporte de CI: ${{ github.workflow }} en ${{ github.ref_name }}",
+              "description": "El pipeline ha finalizado.\nCommit: ${{ github.sha }}\nAutor: ${{ github.actor }}",
+              "issuetype": { "name": "Task" }
+            }
+          }' \
+          "${{ secrets.JIRA_BASE_URL }}/rest/api/3/issue"
