update: :art: Add environment specification for Jira notification job and clean up test documentation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -270,6 +270,7 @@ jobs:
   notify-jira:
     name: Stage 8 - Notify Jira
     needs: [cleanup]
+    environment: JIRA
     runs-on: ubuntu-latest
     if: always()
     steps:
