--- a/promtail/promtail.yaml
+++ b/promtail/promtail.yaml
@@ -21,7 +21,7 @@ scrape_configs:
           firstline: '^\d{4}-\d{2}-\d{2}'
       - regex:
           expression: >
-            ^(?P<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}),\d+\s+fail2ban\.(?P<component>\S+)\s+\[(?P<pid>\d+)\]:\s+(?P<level>\S+)\s+\[(?P<jail>[^\]]+)\]\s+(?P<msg>.*)$
+            ^(?P<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}),\d+\s+fail2ban\.(?P<component>\S+)\s+\[(?P<pid>\d+)\]:\s+(?P<level>\S+)(?:\s+\[(?P<jail>[^\]]+)\])?\s+(?P<msg>.*)$
       - timestamp:
           source: time
           format: '2006-01-02 15:04:05'
