--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,6 +157,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r api/requirements.txt
+          pip install pytest pytest-asyncio pytest-cov
 
       - name: Set environment variables for tests
         run: |
