--- a/promtail/promtail.yaml
+++ b/promtail/promtail.yaml
@@ -15,7 +15,7 @@ scrape_configs:
           - localhost
         labels:
           job: fail2ban
-          __path__: ${FAIL2BAN_LOG_PATH}
+          __path__: /var/log/fail2ban.log
     pipeline_stages:
       - multiline:
           firstline: '^\d{4}-\d{2}-\d{2}'
