--- a/promtail/promtail.yaml
+++ b/promtail/promtail.yaml
@@ -22,8 +22,7 @@ scrape_configs:
       - multiline:
           firstline: '^\d{4}-\d{2}-\d{2}'
       - regex:
-          expression: >
-            ^(?P<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}),\d+\s+fail2ban\.(?P<component>\S+)\s+\[(?P<pid>\d+)\]:\s+(?P<level>\S+)(?:\s+\[(?P<jail>[^\]]+)\])?\s+(?P<msg>.*)$
+          expression: '.*\[(?P<jail>[^\]]+)\].*'
       - timestamp:
           source: time
           format: '2006-01-02 15:04:05'
