--- a/loki/config.yaml
+++ b/loki/config.yaml
@@ -5,7 +5,7 @@ server:
   log_level: info
 
 common:
-  path_prefix: /loki # Prefijo para todos los directorios internos de Loki
+  path_prefix: /loki
   storage:
     filesystem:
       chunks_directory: /loki/chunks
@@ -18,10 +18,10 @@ common:
 
 schema_config:
   configs:
-    - from: 2020-10-24 # Cambiar esta fecha a una actual si es un setup nuevo o mantenerla si es un estándar que sigues
+    - from: 2020-10-24              # keep or bump to “today” on fresh installs
       store: boltdb-shipper
       object_store: filesystem
-      schema: v11 # o v12, v13 dependiendo de la versión de Loki y necesidades
+      schema: v11
       index:
         prefix: index_
         period: 24h
@@ -31,22 +31,19 @@ storage_config:
     active_index_directory: /loki/index
     cache_location: /loki/cache
     cache_ttl: 24h
-    shared_store: filesystem # Asegurar que coincida con object_store arriba si se usa boltdb-shipper
-
-compactor:
-  working_directory: /loki/compactor # Directorio de trabajo (se creará bajo path_prefix)
-  compaction_interval: 10m
-  retention_enabled: true
-  retention_delete_delay: 2h
-  retention_delete_worker_count: 150
+    shared_store: filesystem        # must match object_store above
 
 limits_config:
   reject_old_samples: true
-  reject_old_samples_max_age: 168h # 7 días
-  # Deshabilita la validación de esquema v13 para metadata estructurada si no la usas o hay problemas.
-  # Para versiones recientes de Loki, structured_metadata es el camino a seguir.
-  # allow_structured_metadata: false # Comentado, ya que usualmente se quiere permitir por defecto en nuevas versiones.
-  # Si tu regex de promtail no extrae metadata estructurada, esta opción tiene menos impacto.
+  reject_old_samples_max_age: 168h  # 7 days
+  retention_period: 7d             # <— global retention window
+
+compactor:
+  working_directory: /loki/compactor
+  compaction_interval: 10m
+  retention_enabled: true
+  retention_delete_delay: 2h
+  delete_request_store: filesystem  # <— required since Loki 2.9
 
 ruler:
-  alertmanager_url: http://localhost:9093 # Si usaras Alertmanager con Loki
+  alertmanager_url: http://localhost:9093
